fix images to fit to screen on small sized screens

--- a/app/assets/stylesheets/api/main.scss
+++ b/app/assets/stylesheets/api/main.scss
@@ -6,6 +6,22 @@
 
   .top-title-div {
     margin: 0 40px;
+
+    .top-title {
+      font-size: 50px;
+      font-weight: lighter;
+      padding: 20px 0;
+      margin: 20px 0;
+      letter-spacing: 2px;
+      width: 100%;
+      text-align: center;
+
+      strong {
+        font-weight: normal;
+        color: #1D9C73;
+        letter-spacing: 1px;
+      }
+    }
   }
 
   @media screen and (max-width: 1215px) {
@@ -26,39 +42,29 @@
     }
   }
 
-  .top-title {
-    font-size: 50px;
-    font-weight: lighter;
-    padding: 20px 0;
-    margin: 20px 0;
-    letter-spacing: 2px;
-    width: 100%;
-    text-align: center;
-
-    strong {
-      font-weight: normal;
-      color: #1D9C73;
-      letter-spacing: 1px;
-    }
-
-  }
-
   @media (max-width: 680px) {
-    .top-title {
+    #top-title {
       font-size: 40px;
     }
   }
 
   @media (max-width: 460px) {
-    .top-title {
+    #top-title {
       font-size: 30px;
       margin: 0 10px;
     }
   }
 
   .destinations-index {
+    width: 830px;
     display: flex;
     justify-content: center;
+    align-content: center;
+
+    h2 {
+      width: 100%;
+      align-self: center;
+    }
 
     h3 {
       font-size: 19px;
@@ -69,9 +75,20 @@
       font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif;
     }
 
+    img {
+      position: relative;
+      width: 250px;
+      height: 150px;
+      background-position: 50% 50%;
+      background-repeat: no-repeat;
+      background-size: contain;
+      border-radius: 2px;
+    }
+
     .destinations-items {
       display: flex;
       width: 100%;
+      margin-bottom: 60px;
 
       .cursor-responsive {
         cursor: pointer;
@@ -87,27 +104,6 @@
           text-align: left;
         }
       }
-    }
-
-    img {
-      position: relative;
-      width: 250px;
-      height: 150px;
-      background-position: 50% 50%;
-      background-repeat: no-repeat;
-      background-size: contain;
-      border-radius: 2px;
-    }
-  }
-
-  .destinations-index {
-    width: 830px;
-    display: flex;
-    align-content: center;
-
-    h2 {
-      width: 100%;
-      align-self: center;
     }
   }
 
@@ -153,6 +149,25 @@
           img {
             width: 500px;
             height: 300px;
+          }
+        }
+      }
+    }
+  }
+
+  @media (max-width: 600px) {
+    .destinations-index-outer {
+      .destinations-index {
+        .destinations-items, #destinations-items {
+          width: 80%;
+
+          .cursor-responsive {
+            width: 100%;
+
+            .city-image {
+              width: 100%;
+              height: 80%;
+            }
           }
         }
       }
